# now-playing-device

./: .gitignore  Brewfile  README.md  index.html  menubar_app.py  requirements.in  requirements.txt  serial_bridge.py  server.py  setup.py
firmware/: circle.yaml
firmware/esp-idf/: CMakeLists.txt  sdkconfig.defaults
firmware/esp-idf/main/: CMakeLists.txt  Kconfig.projbuild  display.c  display.h  idf_component.yml  main.c  now_playing.h  serial.c  serial.h  touch.c  touch.h  ui.c  ui.h
firmware/esp-idf/main/fonts/: montserrat_ext_12.c  montserrat_ext_14.c  montserrat_ext_16.c  montserrat_ext_18.c  montserrat_ext_20.c
web/: index.html
web/NowPlayingDisplay.app/Contents/: CodeResources  Info.plist
web/NowPlayingDisplay.app/Contents/Frameworks/: liblzma.5.dylib  libmpdec.4.0.1.dylib
web/NowPlayingDisplay.app/Contents/Frameworks/Python.framework/Versions/3.13/_CodeSignature/: CodeResources
web/NowPlayingDisplay.app/Contents/MacOS/: NowPlayingDisplay  python
web/NowPlayingDisplay.app/Contents/Resources/: __boot__.py  menubar_app.py
web/NowPlayingDisplay.app/Contents/Resources/lib/python3.13/PIL/.dylibs/: libXau.6.dylib  libavif.16.4.1.dylib  libbrotlicommon.1.2.0.dylib  libbrotlidec.1.2.0.dylib  libfreetype.6.dylib  libharfbuzz.0.dylib  libjpeg.62.4.0.dylib  liblcms2.2.dylib  liblzma.5.dylib  libopenjp2.2.5.4.dylib  libpng16.16.dylib  libsharpyuv.0.dylib  libtiff.6.dylib  libwebp.7.dylib  libwebpdemux.2.dylib  libwebpmux.3.dylib  libxcb.1.1.0.dylib  libz.1.3.1.zlib-ng.dylib
web/NowPlayingDisplay.app/Contents/_CodeSignature/: CodeResources
(+1 files in other folders)
